--- a/l10n/en_GB.json
+++ b/l10n/en_GB.json
@@ -1,6 +1,47 @@
 { "translations": {
 
-    "Name" : "Name"
+    "Name" : "Name",
+    "Own Collab" : "Own Collab",
+    "This share is password-protected" : "This share is password-protected",
+    "The password is wrong. Try again." : "The password is wrong. Try again.",
+    "Password" : "Password",
+    "Date" : "Date",
+    "Show today as red vertical line" : "Show today as red vertical line",
+    "Taskname" : "Taskname",
+    "Show task name in task bar" : "Show task name in task bar",
+    "User colors" : "User colors",
+    "Colorize progress bar with color of first user" : "Colorize progress bar with color of first user",
+    "color has to be defined by the admin in the user management" : "color has to be defined by the admin in the user management",
+    "Scales" : "Scales",
+    "Scale to hour" : "Scale to hour",
+    "Scale to day" : "Scale to day",
+    "Scale to week" : "Scale to week",
+    "Zoom to fit" : "Zoom to fit",
+    "Show critical path" : "Show critical path",
+    "Critical path" : "Critical path",
+    "only available in commercial version" : "only available in commercial version",
+    "Share chart project" : "Share chart project",
+    "Choose a password for the public link" : "Choose a password for the public link",
+    "Password protection" : "Password protection",
+    "Expiration time" : "Expiration time",
+    "Provide recipient email address" : "Provide recipient email address",
+    "Edit task details" : "Edit task details",
+    "Assign to resources" : "Assign to resources",
+    "Start" : "Start",
+    "End" : "End",
+    "Predecessor" : "Predecessor",
+    "Buffer" : "Buffer",
+    "Link" : "Link",
+    "Progress" : "Progress",
+    "Milestone" : "Milestone",
+    "Save" : "Save",
+    "Cancel" : "Cancel",
+    "Delete" : "Delete",
+    "Share" : "Share",
+    "Export" : "Export",
+    "Settings" : "Settings",
+    "___": "___",
+    "Submit": "Submit"
 
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
