--- a/l10n/en_GB.json
+++ b/l10n/en_GB.json
@@ -40,7 +40,36 @@
     "Share" : "Share",
     "Export" : "Export",
     "Settings" : "Settings",
-    "___": "___",
+    "Access to the project ownCollab chart": "Access to the project ownCollab chart",
+    "Error %s": "Error %s",
+    "message": "message",
+    "operation": "operation",
+    "Application throw error %s": "Application throw error %s",
+    "minute": "minute",
+    "hour": "hour",
+    "day": "day",
+    "week": "week",
+    "quarter": "quarter",
+    "month": "month",
+    "year": "year",
+    "Define period to export": "Define period to export",
+    "Paper size": "Paper size",
+    "Orientation": "Orientation",
+    "Define Header": "Define Header",
+    "Define Footer": "Define Footer",
+    "Left": "Left",
+    "Center": "Center",
+    "Right": "Right",
+    "Size": "Size",
+    "will be deleted permanently, are you sure?": "will be deleted permanently, are you sure?",
+    "Filter by task groups or resource": "Filter by task groups or resource",
+    "Enter passphrase to be part of task name": "Enter passphrase to be part of task name",
+    "Filter by task groups or tasks": "ilter by task groups or tasks",
+    "You do not have the right to modify the chart": "You do not have the right to modify the chart",
+    "Information": "Information",
+    "Resources": "Resources",
+    "Duration": "Duration",
+    "Link type": "Link type",
     "Submit": "Submit"
 
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
