langs and buffers

--- a/l10n/ru.json
+++ b/l10n/ru.json
@@ -1,46 +1,75 @@
 { "translations": {
 
-    "Name" : "Name",
-    "Own Collab" : "Own Collab",
-    "This share is password-protected" : "Общий доступ защищен паролем",
-    "The password is wrong. Try again." : "Неверный пароль. Повторите попытку.",
-    "Password" : "Пароль",
-    "Date" : "Дата",
-    "Show today as red vertical line" : "Отобразить текущий день",
-    "Taskname" : "Задача",
-    "Show task name in task bar" : "Отображать название задач на линейке",
-    "User colors" : "Использовать цвета",
-    "Colorize progress bar with color of first user" : "Раскрасить прогресс бар с цветом первого пользователя",
-    "color has to be defined by the admin in the user management" : "цвет должен быть определен администратором в управлении пользователями",
-    "Scales" : "Масштаб",
-    "Scale to hour" : "Масштаб в часах",
-    "Scale to day" : "Масштаб в днях",
-    "Scale to week" : "Масштаб в неделях",
-    "Zoom to fit" : "Подогнать по размеру",
-    "Show critical path" : "Показать критический маршрут",
-    "Critical path" : "Критический маршрут",
-    "only available in commercial version" : "доступно только в коммерческой версии",
-    "Share chart project" : "Открыть общий доступ для графика проекта",
-    "Choose a password for the public link" : "Установить пароль для общего доступа",
-    "Password protection" : "Защитить паролем",
-    "Expiration time" : "Время окончания срока действия",
-    "Provide recipient email address" : "Отправить приглашения на электронную почту",
-    "Edit task details" : "Изменить данные задачи",
-    "Assign to resources" : "Назначить ресурсы",
-    "Start" : "Начало",
-    "End" : "Завершение",
-    "Predecessor" : "Предшественник",
-    "Buffer" : "Буфер",
-    "Link" : "Ссылка",
-    "Progress" : "Прогресс",
-    "Milestone" : "Этап",
-    "Save" : "Сохранить",
-    "Cancel" : "Отмена",
-    "Delete" : "Удалить",
-    "Share" : "Общий доступ",
-    "Export" : "Экспортировать",
-    "Settings" : "Параметры",
-    "___": "___",
+    "Name": "Название",
+    "Own Collab": "Own Collab",
+    "This share is password-protected": "Общий доступ защищен паролем",
+    "The password is wrong. Try again.": "Неверный пароль. Повторите попытку.",
+    "Password": "Пароль",
+    "Date": "Дата",
+    "Show today as red vertical line": "Отобразить текущий день",
+    "Taskname": "Задача",
+    "Show task name in task bar": "Отображать название задач на линейке",
+    "User colors": "Использовать цвета",
+    "Colorize progress bar with color of first user": "Раскрасить прогресс бар с цветом первого пользователя",
+    "color has to be defined by the admin in the user management": "цвет должен быть определен администратором в управлении пользователями",
+    "Scales": "Масштаб",
+    "Scale to hour": "Масштаб в часах",
+    "Scale to day": "Масштаб в днях",
+    "Scale to week": "Масштаб в неделях",
+    "Zoom to fit": "Подогнать по размеру",
+    "Show critical path": "Показать критический маршрут",
+    "Critical path": "Критический маршрут",
+    "only available in commercial version": "доступно только в коммерческой версии",
+    "Share chart project": "Открыть общий доступ для графика проекта",
+    "Choose a password for the public link": "Установить пароль для общего доступа",
+    "Password protection": "Защитить паролем",
+    "Expiration time": "Время окончания срока действия",
+    "Provide recipient email address": "Отправить приглашения на электронную почту",
+    "Edit task details": "Изменить данные задачи",
+    "Assign to resources": "Назначить ресурсы\"",
+    "Start": "Начало",
+    "End": "Завершение",
+    "Predecessor": "Предшественник",
+    "Buffer": "Буфер",
+    "Link": "Ссылка",
+    "Progress": "Прогресс",
+    "Milestone": "Этап",
+    "Save": "Сохранить",
+    "Cancel": "Отмена",
+    "Delete": "Удалить",
+    "Share": "Общий доступ",
+    "Export": "Экспортировать",
+    "Settings": "Параметры",
+    "Access to the project ownCollab chart": "Access to the project ownCollab chart",
+    "Error %s": "Error %s",
+    "message": "message",
+    "operation": "operation",
+    "Application throw error %s": "Application throw error %s",
+    "minute": "minute",
+    "hour": "hour",
+    "day": "day",
+    "week": "week",
+    "quarter": "quarter",
+    "month": "month",
+    "year": "year",
+    "Define period to export": "Define period to export",
+    "Paper size": "Paper size",
+    "Orientation": "Orientation",
+    "Define Header": "Define Header",
+    "Define Footer": "Define Footer",
+    "Left": "Left",
+    "Center": "Center",
+    "Right": "Right",
+    "Size": "Size",
+    "will be deleted permanently, are you sure?": "will be deleted permanently, are you sure?",
+    "Filter by task groups or resource": "Filter by task groups or resource",
+    "Enter passphrase to be part of task name": "Enter passphrase to be part of task name",
+    "Filter by task groups or tasks": "ilter by task groups or tasks",
+    "You do not have the right to modify the chart": "You do not have the right to modify the chart",
+    "Information": "Information",
+    "Resources": "Resources",
+    "Duration": "Duration",
+    "Link type": "Link type",
     "Submit": "Отправить"
 
 },"pluralForm" :"nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);"
