--- a/l10n/ru.json
+++ b/l10n/ru.json
@@ -40,36 +40,36 @@
     "Share": "Общий доступ",
     "Export": "Экспортировать",
     "Settings": "Параметры",
-    "Access to the project ownCollab chart": "Access to the project ownCollab chart",
-    "Error %s": "Error %s",
-    "message": "message",
-    "operation": "operation",
-    "Application throw error %s": "Application throw error %s",
-    "minute": "minute",
-    "hour": "hour",
-    "day": "day",
-    "week": "week",
-    "quarter": "quarter",
-    "month": "month",
-    "year": "year",
-    "Define period to export": "Define period to export",
-    "Paper size": "Paper size",
-    "Orientation": "Orientation",
-    "Define Header": "Define Header",
-    "Define Footer": "Define Footer",
-    "Left": "Left",
-    "Center": "Center",
-    "Right": "Right",
-    "Size": "Size",
-    "will be deleted permanently, are you sure?": "will be deleted permanently, are you sure?",
-    "Filter by task groups or resource": "Filter by task groups or resource",
-    "Enter passphrase to be part of task name": "Enter passphrase to be part of task name",
-    "Filter by task groups or tasks": "ilter by task groups or tasks",
-    "You do not have the right to modify the chart": "You do not have the right to modify the chart",
-    "Information": "Information",
-    "Resources": "Resources",
-    "Duration": "Duration",
-    "Link type": "Link type",
+    "Access to the project ownCollab chart": "Доступ к проекту ownCollab диаграммы",
+    "Error %s": "Ошибка %s",
+    "message": "сообщение",
+    "operation": "операция",
+    "Application throw error %s": "Приложение выдало ошибку %s",
+    "minute": "минут",
+    "hour": "часов",
+    "day": "дней",
+    "week": "недель",
+    "quarter": "квартал",
+    "month": "месяц",
+    "year": "год",
+    "Define period to export": "Определить период для экспорта",
+    "Paper size": "Размер бумаги",
+    "Orientation": "Ориентация",
+    "Define Header": "Определение заголовка",
+    "Define Footer": "Определение колонтитула",
+    "Left": "Левая сторона",
+    "Center": "В центре",
+    "Right": "Справа",
+    "Size": "Размер",
+    "will be deleted permanently, are you sure?": "будут удалены навсегда, вы уверены?",
+    "Filter by task groups or resource": "Фильтр по группам или ресурсам",
+    "Enter passphrase to be part of task name": "Введите ключевую фразу, часть имени задачи",
+    "Filter by task groups or tasks": "Фильтр по группам или задачам ",
+    "You do not have the right to modify the chart": "Вы не имеете право изменять график",
+    "Information": "Информация",
+    "Resources": "Ресурсы",
+    "Duration": "Продолжительность",
+    "Link type": "Тип ссылки",
     "Submit": "Отправить"
 
 },"pluralForm" :"nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);"
