--- a/l10n/de_DE.json
+++ b/l10n/de_DE.json
@@ -70,7 +70,11 @@
     "Resources": "Ressourcen",
     "Duration": "Dauer",
     "Link type": "Verknüpfungstyp",
-    "Submit": "Senden"
+    "Submit": "Senden",
+    "loading": "Laden",
+    "Portrait": "Porträt",
+    "Album": "Album",
+    "The necessary modules of application are not loaded!": "Die benötigten Module sind nicht geladen!"
 
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
