--- a/l10n/en_GB.json
+++ b/l10n/en_GB.json
@@ -70,7 +70,11 @@
     "Resources": "Resources",
     "Duration": "Duration",
     "Link type": "Link type",
-    "Submit": "Submit"
+    "Submit": "Submit",
+    "loading": "loading",
+    "Portrait": "Portrait",
+    "Album": "Album",
+    "The necessary modules of application are not loaded!": "Die benötigten Module sind nicht geladen!"
 
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
