--- a/l10n/ru.json
+++ b/l10n/ru.json
@@ -26,7 +26,7 @@
     "Expiration time": "Время окончания срока действия",
     "Provide recipient email address": "Отправить приглашения на электронную почту",
     "Edit task details": "Изменить данные задачи",
-    "Assign to resources": "Назначить ресурсы\"",
+    "Assign to resources": "Назначить ресурсы",
     "Start": "Начало",
     "End": "Завершение",
     "Predecessor": "Предшественник",
