--- a/l10n/en_GB.json
+++ b/l10n/en_GB.json
@@ -73,7 +73,7 @@
     "Submit": "Submit",
     "loading": "loading",
     "Portrait": "Portrait",
-    "Album": "Album",
+    "Landscape": "Landscape",
     "The necessary modules of application are not loaded!": "The necessary modules of application are not loaded!",
     "Security at risk. Suspicious response from the server.": "Security at risk. Suspicious response from the server",
     "The necessary scripts of dhtmlxgantt are not loaded!": "The necessary scripts of dhtmlxgantt are not loaded!",
